2009-07-21  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(AC_FIND_JAVAC): Check whether we are using
	ecj or javac.  Don't fail if no JAVAC is found
	as ecj.jar can still be used.
	(IT_FIND_ECJ): Drop -nowarn.
	(FIND_ECJ_JAR): Only fail if there is no other
	compiler found.  Communalise message output.
	(IT_LIBRARY_CHECK): Quote output so array brackets
	are not lost.
	(IT_SCANNER_CHECK): Likewise, and use return value
	of javac not grep.
	(IT_CP_40630): Likewise, and correct bug with classname.
	(IT_USING_ECJ): Work out whether javac is ecj or not.
	* javac.in:
	Move ecj opt generation to a subroutine so it is only
	performed when needed.  Run @JAVAC@ rather than @ECJ@
	and vary arguments as needed depending on @USING_ECJ@.
	Use same warning settings as GNU Classpath.

2009-07-20  Andrew John Hughes  <ahughes@redhat.com>

	* acinclude.m4:
	(IT_LIBRARY_CHECK): Check the class can be
	run as well, for when java and javac use
	different class libraries.

2009-07-17  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Remove use of WITH_OPENJDK, WITH_ICEDTEA
	and SYSTEM_GCJ_DIR replacing with BOOTSTRAPPING
	and SYSTEM_JDK_DIR as appropriate.
	* acinclude.m4:
	(FIND_JAVAC): Search for generic 'javac' first.
	(IT_FIND_ECJ): Only use ecj as javac if JAVA is unset.
	(FIND_JAVAH): Try javah in SYSTEM_JDK_DIR before searching.
	(FIND_JAR): Likewise for jar.
	(FIND_RMIC): Likewise for rmic.
	(IT_CHECK_IF_BOOTSTRAPPING): Allow bootstrapping to be disabled.
	Replaces --with-icedtea/--with-openjdk.
	(IT_CHECK_FOR_JDK): Find JDK to use.  Replaces --with-gcj-jdk,
	--with-icedtea-home, --with-openjdk-home.  At present, only checks
	for gcj jdks if not bootstrapping.
	(AC_CHECK_FOR_OPENJDK): Removed.
	(AC_CHECK_FOR_ICEDTEA): Removed.
	(AC_CHECK_FOR_GCJ_JDK): Removed.
	* configure.ac:
	Remove --with-icedtea and --with-openjdk.  Always check
	for a JDK and then allow individual binaries to be overridden
	by --with-x.
	* javac.in: